# video-metadata-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  build_packages.md
ffi/: info.c  internals.h  vmrs.c  vmrs.h
src/: enums.rs  lib.rs  symbols.rs  types.rs  video_metadata.rs
src/formats/: mod.rs  webm.rs
src/formats/webm/: mod.rs  webm.rs
test/: test-simple.c
