[package]
name = "video-metadata"
version = "0.1.3"
authors = [
  "Guillaume Gomez <guillaume1.gomez@gmail.com>",
  "Emilio Cobos Álvarez <ecoal95@gmail.com>"
]
build = "build.rs"

description = "Video metadata parser"
repository = "https://github.com/guillaumegomez/video-metadata-rs"
license = "MIT"

[lib]
name = "video_metadata"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "^0.2"
lazy_static = "0.2"
