[package]
name = "video-metadata"
version = "0.1.3"
authors = [
  "Guillaume Gomez <guillaume1.gomez@gmail.com>",
  "Emilio Cobos Álvarez <ecoal95@gmail.com>"
]

description = "Video metadata parser"
repository = "https://github.com/guillaumegomez/video-metadata-rs"
license = "MIT"

[lib]
name = "video_metadata"

[dependencies]
ogg_metadata = "0.3"
